Removed unnecessary styling that caused the scrollbar to be clipped. Fixes #1094.

--- a/src/less/styles-pivot.less
+++ b/src/less/styles-pivot.less
@@ -202,7 +202,6 @@ html.win-hoverable .win-pivot {
     overflow-y: auto;
     -ms-overflow-style: -ms-autohiding-scrollbar;
     padding: 0px 19px;
-    width: ~"calc(100% - 28px)";
 }
 
 /*
